rework install process (see README for details)
but upgrading should not require manual intervention