@@ -72,12 +72,11 @@ if ! [[ -f "$VD_PATH" ]]; then
 fi
 # Do install tasks
 ui_print "- Installing microG GmsCore"
-if [ -d "/product/priv-app/GmsCore" ]; then
-  mkdir -p "$MODPATH/product/priv-app/GmsCore"
-  cp "$GMS_PATH" "$MODPATH/product/priv-app/GmsCore/GmsCore.apk"
-  rm -f "$MODPATH/system/priv-app/GmsCore/GmsCore.apk"
+if [ ! -d "/my_bigball/priv-app/GmsCore" ]; then
+  mkdir -p "$MODPATH/system/product/priv-app/GmsCore"
+  cp "$GMS_PATH" "$MODPATH/system/product/priv-app/GmsCore/GmsCore.apk"
 else
-  rm -rf "$MODPATH/product/priv-app/GmsCore/"
+  mkdir -p "$MODPATH/system/priv-app/microG"
   cp "$GMS_PATH" "$MODPATH/system/priv-app/microG/microG.apk"
 fi
 if (echo "$DUMP_VD" | grep "android.permission.FAKE_PACKAGE_SIGNATURE") >/dev/null; then
@@ -87,12 +86,11 @@ if (echo "$DUMP_VD" | grep "android.permission.FAKE_PACKAGE_SIGNATURE") >/dev/nu
 else
   ui_print "- Installing Play Store"
 fi
-if [ -d "/product/priv-app/Phonesky" ]; then
-  mkdir -p "$MODPATH/product/priv-app/Phonesky"
-  cp "$VD_PATH" "$MODPATH/product/priv-app/Phonesky/Phonesky.apk"
-  rm -f "$MODPATH/system/priv-app/Phonesky/Phonesky.apk"
+if ! [ -d "/my_bigball/priv-app/GmsCore" ]; then
+  mkdir -p "$MODPATH/system/product/priv-app/Phonesky"
+  cp "$VD_PATH" "$MODPATH/system/product/priv-app/Phonesky/Phonesky.apk"
 else
+  mkdir -p "$MODPATH/system/product/priv-app/Phonesky"
   cp "$VD_PATH" "$MODPATH/system/priv-app/Phonesky/Phonesky.apk"
-  rm -rf "$MODPATH/product/priv-app/Phonesky/"
 fi
 mmm_exec hideLoading
