@@ -1,7 +1,7 @@
 id=microg_installer
 name=microG Installer Revived
-version=Revived 4.0.2-0
-versionCode=40020
+version=Revived 4.1.0-0
+versionCode=40100
 author=nift4
 description=Install microG GmsCore, Companion (or Play Store if you want so), GsfProxy and MapsV1 to /system/
 updateJson=https://raw.github.com/nift4/microg_installer_revived/master/update.json
