@@ -1,6 +1,6 @@
 {
-    "version": "Revived 4.0.2-0",
-    "versionCode": 40020,
-    "zipUrl": "https://github.com/nift4/microg_installer_revived/releases/download/v4.0.2-0/microG_Installer_Revived.zip",
-    "changelog": "https://github.com/nift4/microg_installer_revived/raw/v4.0.2-0/CHANGELOG"
+    "version": "Revived 4.1.0-0",
+    "versionCode": 40100,
+    "zipUrl": "https://github.com/nift4/microg_installer_revived/releases/download/v4.1.0-0/microG_Installer_Revived.zip",
+    "changelog": "https://github.com/nift4/microg_installer_revived/raw/v4.1.0-0/CHANGELOG"
 }
