@@ -1,2 +1,9 @@
-rework install process (see README for details)
-but upgrading should not require manual intervention
+Improve compatibility with stock ROMs.
+
+To install this module on a stock ROM:
+1. Install gms_delete.zip from https://github.com/user-attachments/files/16912362/gms_delete.zip
+2. Reboot
+3. Uninstall Google Play Services using Settings or `pm uninstall`
+4. Install microG APK (must succeed) and Companion / Play Store APK
+5. Install microG Installer Revived
+6. Reboot
